# learn_japanese

./: Cargo.toml  README.md  log.txt
.github/workflows/: rust.yml
src/: app.rs  config.rs  hiraganas.rs  main.rs  ui.rs
