[package]
name = "learn_japanese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
rand = "0.8.5"
crossterm = "0.26"
tui = { package = "ratatui", version = "0.20.1" }
tui-input = "0.7.0"
ratatui = "0.24.0"
